<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Migraine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Terms And Conditions Screen -->
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="application_terms">Application Terms of Use</string>
    <string name="terms_strings">This Application is made available to you by Novartis\nConsumer Health, Inc. ("Novartis") free of charge for\nUse on your smartphone, or other device\n("Device"). However, you may be charged standard\nrates or fees by wireless or telephone carriers or other\nparties that are not connected to Novartis for the\ndownload and use of the Application. By downloading\nand using this application, you are agreeing to these\nApplication Terms of Use.\n\nAll personal data is stored on the devices and is not\nshared with Novartis.\n\nIf any part or provision of these Terms of Use is found\nto be invalid, such invalidity shall not affect the\nenforceability or any other part or provision of these\nTerms of Use.</string>
    <string name="checkbox_terms_string">I have read and accept the Terms &amp; Conditions.</string>
    <!-- Setting Screen Strings -->
    <string name="setting_string">Enable this setting to show the menstruation question in the My Diary section of the app.</string>
    <string name="ask_about">Ask about Menstruation</string>
    <string name="terms_url">file:///android_asset/terms.html</string>

    <!-- Dialog box String -->
    <string name="loading">Loading...</string>

    <!-- Home Screen String -->


    <!-- Home TAB Screen String -->
    <string name="potential_trigger">Potential Triggers</string>
    <string name="trigger_exposure">Trigger Exposure</string>
    <string name="symptom_frequency">Symptom Frequency</string>
    <string name="pain_location">Pain Location</string>
    <string name="pain_level">Pain Level</string>
    <string name="chartSize">Chart %1$s of 5</string>

    <!-- Print Activity string -->
    <string name="printDocument">Documents Printed SuccessFully.</string>
    <string name="title">title</string>
    <string name="ok">OK</string>
    <string name="pdfdatatype">application/pdf</string>

    <!-- Database Strings -->
    <string name="DB_NAME">MyMigraine.sqlite</string>
    <string name="DB_PATH">/data/data/com.novartis.mymigraine/databases/</string>
    <string name="Table_Question">MST_Question</string>
    <string name="Table_Answer">MST_Answer</string>
    <string name="Table_UserAnswer">MST_UserAnswer</string>

    <!-- Preference value -->

    <string name="warningSign">warningSign</string>
    <string name="location">Location</string>
    <string name="symptoms">Symptoms</string>
    <string name="diet">Diet</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="environment">Environment</string>
    <string name="datetime">DateTime</string>
    <string name="filterVia">filter</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="periodTime">PeriodTime</string>
    <string name="learnChart">LearnChart</string>
    <string name="learnDiaryLog">LearnDialog</string>

    
    <!-- chart menu screen -->
    <string name="PT_SubTitle">Share of triggers entered</string>
    <string name="TE_SubTitle">Percentage of exposure to trigger 24-48 hours prior to headache</string>
    <string name="SF_SubTitle">Percentage of time you experienced a specific headache symptom</string>
    <string name="PL_SubTitle">Percentage of times you indicated a specific headache pain location</string>
    <string name="PLevel_SubTitle">Percentage of times you indicated a specific headache pain intensity</string>
    
    
    <!-- Learn Dialog String -->
    <string name="learn_filter">Use the Filter icon to select the range of dates you would like to see in the charts.</string>
    <string name="learn_share">Use the Share icon to email or print the information for your healthcare provider.</string>
    <string name="learn_learn">Use the Learn tab to get more information.</string>
    
    <!-- vinay -->

    <string-array name="learn_options">
        <item>What is Migraine?</item>
        <item>Coping with Migraines</item>
        <item>Migraine Triggers</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="start_headache">When did it start?</string>
    <string name="end_headache">How long did it last?</string>
    <string name="main_text">Home Screen</string>
    <string name="set_date">Set Date</string>
    <string name="new_entry">New entry</string>
    <string name="migraine_diary">Migraine Diary</string>
    <string name="today">Today</string>
    <string name="did_you_have_a_headache_">Did you have a headache?</string>
    <string name="yes_i_had_a_headache">Yes, I had a headache</string>
    <string name="no_i_did_not">No, I did not</string>
    <string name="view_previous_entries">View previous entries</string>
    <string name="edit_a_previous_entry">Edit a previous entry</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="when_did_it_start_">When did it start?</string>
    <string name="how_long_did_it_last_">How long did it last?</string>
    <string name="how_intense_was_the_pain_">How intense was the pain?</string>
    <string name="add_your_own_answer">Add your own answer</string>
    <string name="get_your_coupon">Get your Coupon</string>
    <string name="caplets">Caplets</string>
    <string name="choose_mail_client">Choose Mail Client</string>
    <string name="no_email_client_installed_">No email client installed.</string>
    <string name="what_is_migraine_">What is Migraine?</string>
    <string name="coping_with_migraines">Coping with Migraines</string>
    <string name="migraine_triggers">Migraine Triggers</string>
    <string name="using_this_application">Using this Application</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="location_of_pain_">Location of pain:</string>
    <string name="did_you_experience_any_warning_signs_">Did you experience any warning signs?</string>
    <string name="did_you_experience_any_of_these_symptoms_">Did you experience any of these symptoms?</string>
    <string name="did_you_take_any_medication_and_or_try_any_other_therapy_">Did you take any medication and/or try any other therapy?</string>
    <string name="did_you_get_relief_from_the_medication_and_or_therapy_">Did you get relief from the medication and/or therapy?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="did_you_skip_any_meals_">Did you skip any meals?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="are_you_fasting_">Are you fasting?</string>
    <string name="did_you_consume_any_of_the_following_">Did you consume any of the following?</string>
    <string name="did_you_experience_any_of_the_following_">Did you experience any of the following?</string>
    <string name="were_you_exposed_to_any_of_the_following_">Were you exposed to any of the following?</string>
    <string name="are_you_experiencing_any_menstrual_or_pre_menstrual_symptoms_">Are you experiencing any menstrual or pre-menstrual symptoms?</string>
    <string name="don_t_ask_me_again">Don\'t ask me again</string>
    <string name="save_this_entry">Save this entry</string>
    <!-- Home Screen String -->
    <string name="home_action_title"><![CDATA[<i>MY MIGRAINE TRIGGERS<sup>&trade;</sup></i>]]></string>
    <string name="home_action_subtitle"><![CDATA[<i>by the makers of EXCEDRIN<sup>&reg;</sup></i>]]></string>
    <string name="notes">Notes</string>
    <string name="done">Done</string>
    <string name="enter_text">Enter Text</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_own_item">Add your own item</string>
    <string name="add_your_own_location">Add your own location</string>
    <string name="add_your_own_warning_sign">Add your own warning sign</string>
    <string name="add_your_own_symptom">Add your own symptom</string>
    <string name="add_your_own_migraine_treatment">Add your own migraine treatment</string>
    <string name="add_your_own_relief_desription">Add your own relief description</string>
    <string name="add_your_own_food_item">Add your own food item</string>
    <string name="notes_">Notes:</string>
    <string name="view_your_own_notes">View your own notes</string>
    <string name="the_date_on_entry">The date on entry</string>
    <string name="did_you_have_a_headache_on_this_day_">Did you have a headache on this day?</string>
    <string name="your_entry_was_saved_">Your entry was saved.</string>
    <string name="would_you_like_to_view_your_entry_">Would you like to view your entry?</string>
    <string name="enter_email_id">Enter email address</string>
    <string name="network_not_availbale">Network connection is disabled.Please enable WIFI or Mobile connection to use this service.</string>
    <string name="progress_dialog_msg_wait">Email is being sent.Please wait...</string>
    <!-- <string name="flurry_analytics_api_key">7WMXQ8MR6HWG8HM82NJW</string> -->
    <string name="flurry_analytics_api_key">3RRKW2FKZ3HK97YB2MYD</string>
    <string name="share_with_your_doctor_by_printing_or_email_your_data">Share with Your Doctor by Printing or Email Your Data</string>
    
    <!-- Mihir Additions -->
    <string name="pdf_file_name">My Migraine Triggers.pdf</string>
    <integer name="pi_chart_size">220</integer>
	<string name="list_plevel_barchart_scale_x">1.0</string>
	<string name="list_plevel_barchart_scale_y">1.0</string>
	<string name="email_url">https://www.novartis-otc.com/webservices/sendNonTemplateEmail?recipientEmail=</string>
	<!-- <string name="email_url">http://10.2.5.118:8080/webservices/sendNonTemplateEmail?recipientEmail=</string> -->
	
</resources>