<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp" >

            <TextView
                android:id="@+id/txtViewEnvironmentExpose"
                style="@style/red_label_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/were_you_exposed_to_any_of_the_following_" />

            <View
                android:id="@+id/deviderEnvironmentExpose"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/txtViewEnvironmentExpose"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/devider_color" >
            </View>

            <LinearLayout
                android:id="@+id/environmentPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviderEnvironmentExpose"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewMenstrual"
                style="@style/red_label_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/environmentPanel"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/are_you_experiencing_any_menstrual_or_pre_menstrual_symptoms_" />

            <View
                android:id="@+id/deviderMenstrual"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/txtViewMenstrual"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/devider_color" >
            </View>

            <LinearLayout
                android:id="@+id/menstrualButtonPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviderMenstrual"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnMenstrualYes"
                    style="@style/selected_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/yes" />

                <Button
                    android:id="@+id/btnMenstrualNo"
                    style="@style/selected_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/no" />

                <Button
                    android:id="@+id/btnMenstrualDontAskMeAgain"
                    style="@style/selected_button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/don_t_ask_me_again" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewNotes"
                style="@style/red_label_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menstrualButtonPanel"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/notes" />

            <View
                android:id="@+id/deviderNotes"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/txtViewNotes"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/devider_color" >
            </View>

            <Button
                android:id="@+id/btnNotesAddYourAns"
                style="@style/black_bold_font_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviderNotes"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_add_ur_ans"
                android:drawableRight="@drawable/ic_button_dark_arrow"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/add_your_own_answer" />

            <Button
                android:id="@+id/btnSaveThisEntry"
                style="@style/green_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/btnNotesAddYourAns"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/save_this_entry" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>