<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:background="@drawable/learn_dialog_bg" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <RelativeLayout
                android:id="@+id/learn_dialog_lin_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                 >

                <TextView
                    android:id="@+id/learn_dialog_txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Using the Diary Logs"
                    android:textColor="#006699"
                    android:textSize="20sp"
                    android:textStyle="bold" />
               
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/learn_dialog_lin_filter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/learn_dialog_lin_title"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/filter_icon" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:paddingRight="10dp"
                    android:text="@string/learn_filter"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/learn_dialog_lin_share"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/learn_dialog_lin_filter"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/share_icon" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:paddingRight="5dp"
                    android:text="@string/learn_share"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/learn_dialog_lin_learn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/learn_dialog_lin_share"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_tab_learn_unselected" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:paddingRight="5dp"
                    android:text="@string/learn_learn"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            
             <Button
                    android:id="@+id/learn_dialog_btnDone"
                     android:layout_below="@+id/learn_dialog_lin_learn"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/done_btn_selector"
                    android:text="Done"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>